2006-05-10  Adam Jackson  <ajax@freedesktop.org>

	* record/record.c:
	Bug #3561: Crash fix in the Record extension. (Paul Anderson)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* render/render.c:
	Bug #6867: Yet another Render crash fix. (Michel Dänzer)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	* hw/xfree86/os-support/linux/lnx_apm.c:
	Bug #5209: Re-enable building APM and ACPI support. (Michel 
	Dänzer)

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	Make Xephyr build on Solaris:
	
	* hw/kdrive/src/kinput.c: 
	Add #include <sys/file.h> on Solaris for FNONBLOCK/FASYNC definitions

	* hw/kdriver/linux/Makefile.am
	Move agp.c & agp.h to KDRIVE_HW_SOURCES since they're not needed
	for Xephyr-only builds

	* configure.ac:
	Add -lrt to XEPHYR_LIBS if needed to get nanosleep().

2006-05-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Configure.c:
	* hw/xfree86/utils/xorgcfg/text-mode.c:
	* hw/xfree86/utils/xorgconfig/xorgconfig.c:
	Redact a few mentions of speedo font support.

2006-05-02  Matthieu Herrb  <matthieu.herrb@laas.fr>

	* render/mitri.c:
	Typo in ALLLOCATE_LOCAL() arguments, causing mis-computation 
	of the buffer.Bugzilla #6642.

2006-05-01  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* exa/Makefile.am: 
	Fix Solaris build with Sun compilers to work when exa is built before
	hw/xfree86/os-support/solaris (as it is by default now).

2006-05-01  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/WaitFor.c:
	Use min() [defined in include/misc.h] instead of MIN() [not defined in
	any Xorg header].

2006-04-30  Adam Jackson  <ajax@freedesktop.org>

	* Xprint/pcl/PclGC.c:
	* Xprint/ps/PsGC.c:
	* afb/afbgc.c:
	* cfb/cfbgc.c:
	* exa/exa_accel.c:
	* fb/fbgc.c: