@@ -1,3 +1,8 @@
+2006-05-11  Matthias Hopf  <mhopf@suse.de>
+
+	* hw/xfree86/xaa/xaaPict.c: (XAAComposite):
+	Bug #4320: Improved XAA Composite fastpath.
+
 2006-05-10  Adam Jackson  <ajax@freedesktop.org>
 
 	* record/record.c:
